[disabled]="bookForm.invalid"

--- a/book-rating/src/app/books/create-book/create-book.component.html
+++ b/book-rating/src/app/books/create-book/create-book.component.html
@@ -23,6 +23,7 @@
   <div class="form-group">
     <button
       type="submit"
+      [disabled]="bookForm.invalid"
       class="btn btn-primary">Erzeugen</button>
   </div>
 
