Angular UI Components Library (Essential JS 2)

--- a/book-rating/src/app/books/book/book.component.html
+++ b/book-rating/src/app/books/book/book.component.html
@@ -9,6 +9,7 @@
             ⭐
         </span>
       </h2>
+      <h6>{{ book.published | date:'dd.MM.yyyy' }}</h6>
     </div>
     <p>{{ book.description }}</p>
 
