--- a/book-rating/src/styles.scss
+++ b/book-rating/src/styles.scss
@@ -3,3 +3,12 @@
 $primary: #C3002F;
 
 @import "~@angular-schule/workshop-styles/index";
+
+@import '~@syncfusion/ej2-base/styles/bootstrap.css';
+@import '~@syncfusion/ej2-buttons/styles/bootstrap.css';
+@import '~@syncfusion/ej2-inputs/styles/bootstrap.css';
+@import '~@syncfusion/ej2-popups/styles/bootstrap.css';
+@import '~@syncfusion/ej2-lists/styles/bootstrap.css';
+@import '~@syncfusion/ej2-splitbuttons/styles/bootstrap.css';
+@import '~@syncfusion/ej2-calendars/styles/bootstrap.css';
+@import '~@syncfusion/ej2-angular-calendars/styles/bootstrap.css';
