--- a/book-rating/src/app/books/create-book/create-book.component.html
+++ b/book-rating/src/app/books/create-book/create-book.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="bookForm">
+<form [formGroup]="bookForm" (ngSubmit)="submitForm()">
 
   <div class="form-group">
     <label for="isbn">ISBN</label>
@@ -13,6 +13,14 @@
   <div class="form-group">
     <label for="title">Titel</label>
     <input formControlName="title" type="text" class="form-control" id="title">
+  </div>
+
+  <div class="form-group">
+    <label>Erschienen</label>
+    <ejs-datepicker
+      formControlName="published"
+      format="dd.MM.yyyy"
+    ></ejs-datepicker>
   </div>
 
   <div class="form-group">
