--- a/book-rating/src/app/books/book/book.component.html
+++ b/book-rating/src/app/books/book/book.component.html
@@ -1,7 +1,6 @@
 <div class="card mb-4">
   <div class="card-body bg-light">
-      <img class="img-thumbnail float-right"
-        src="//api.angular.schule/avatar/{{ book.rating }}">
+      <img class="img-thumbnail float-right" [src]="book.firstThumbnailUrl" width="200">
     <div class="card-title">
       <h2>
         {{ book.title }}
