first routing, but with snapshot!

--- a/book-rating/src/app/books/book/book.component.html
+++ b/book-rating/src/app/books/book/book.component.html
@@ -20,5 +20,7 @@
       (click)="doRateUp()"
       class="btn btn-primary mr-2"> + </button>
 
+    <a class="btn btn-secondary" [routerLink]="['/book', book.isbn]">Details</a>
+
   </div>
 </div>
