responsive-layout-playground: solutions

--- a/responsive-layout-playground/src/app/pages/angular-flex-layout/angular-flex-layout.component.html
+++ b/responsive-layout-playground/src/app/pages/angular-flex-layout/angular-flex-layout.component.html
@@ -11,7 +11,7 @@
 </p>
 
 <main class="cards-ngf">
-  <app-card number="1"></app-card>
+  <app-card number="1" [ngClass.sm]="'big-card'"></app-card>
   <app-card number="2"></app-card>
   <app-card number="3"></app-card>
   <app-card number="4"></app-card>
