--- a/responsive-layout-playground/src/app/pages/bootstrap-grid/bootstrap-grid.component.html
+++ b/responsive-layout-playground/src/app/pages/bootstrap-grid/bootstrap-grid.component.html
@@ -12,13 +12,13 @@
 
 <div class="container">
   <div class="row">
-    <app-card number="1" class="col-12 mt-4"></app-card>
-    <app-card number="2" class="col-12 mt-4"></app-card>
-    <app-card number="3" class="col-12 mt-4"></app-card>
-    <app-card number="4" class="col-12 mt-4"></app-card>
-    <app-card number="5" class="col-12 mt-4"></app-card>
-    <app-card number="6" class="col-12 mt-4"></app-card>
-    <app-card number="7" class="col-12 mt-4"></app-card>
+    <app-card number="1" class="col-12 col-md-3 mt-4"></app-card>
+    <app-card number="2" class="col-12 col-md-3 mt-4"></app-card>
+    <app-card number="3" class="col-12 col-md-3 mt-4"></app-card>
+    <app-card number="4" class="col-12 col-md-3 mt-4"></app-card>
+    <app-card number="5" class="col-12 col-md-3 mt-4"></app-card>
+    <app-card number="6" class="col-12 col-md-3 mt-4"></app-card>
+    <app-card number="7" class="col-12 col-md-3 mt-4"></app-card>
   </div>
 </div>
 
