--- a/responsive-layout-playground/src/app/pages/media-queries/media-queries.component.scss
+++ b/responsive-layout-playground/src/app/pages/media-queries/media-queries.component.scss
@@ -1,7 +1,7 @@
 .cards {
   display: flex;
   flex-wrap: wrap;
-  align-items: flex-start;
+  align-items: stretch;
 }
 
 app-card {
@@ -12,4 +12,8 @@ app-card {
 // if the browser window is 960px or smaller
 @media only screen and (max-width: 960px) {
 
+  app-card:first-child {
+    flex: 2 0 200px;
+    //border: 1px solid red;
+  }
 }
