rxjs: merge map

--- a/book-rating/src/app/books/book-details/book-details.component.html
+++ b/book-rating/src/app/books/book-details/book-details.component.html
@@ -1,3 +1,4 @@
 <h2>{{ book?.title }}</h2>
 
-<a routerLink="/book/222">Got to Book 222</a>
+<a routerLink="/book/222">Got to Book 222</a><br>
+<a routerLink="/book/9783864904523">Got to Book 9783864904523</a><br>
