--- a/book-rating/src/app/books/book-details/book-details.component.html
+++ b/book-rating/src/app/books/book-details/book-details.component.html
@@ -1,6 +1,7 @@
 <h2>{{ (book$ | async)?.title }}</h2>
 
-<p>{{ (book$ | async)?.description }}</p>
+<button (click)="showDetails = true">Show Details</button>
+<p *ngIf="showDetails">{{ (book$ | async)?.description }}</p>
 
 
 <a routerLink="/book/222">Got to Book 222</a><br>
